<resources>
    <string name="app_name">TextTimeSaver</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login_here">Login Here!</string>
    <string name="or">OR</string>
    <string name="sign_up_here">Sign Up Here!</string>
    <string name="confirm_password">Confirm Password:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login!</string>
    <string name="register">Register!</string>
</resources>
