<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="#2d4059"
    >

    <FrameLayout
        android:id="@+id/registrationContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
></FrameLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/login_here"
        android:textSize="16sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginTop="35sp"
        android:background="@drawable/rounded_btn"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:text="@string/sign_up_here"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/rounded_btn"
        android:textColor="#FFFFFF"/>

</LinearLayout>